--- a/Gllasy.html
+++ b/Gllasy.html
@@ -1,1 +1,9 @@
-<!-- project in Gllacy-->
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Project in Gllacy</title>
+</head>
+<body>
+    <!--Project in Gllacy-->
+</body>
+</html>
